--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,10 @@
     <title>react-deep-dive</title>
   </head>
   <body>
+    <header>
+      <img src="game-logo.png" alt="Logo" />
+      <h1>Tic Tac Toe</h1>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
